Avoid flickering of attachments

--- a/public/style.css
+++ b/public/style.css
@@ -379,6 +379,7 @@ form.search {
   transition: 0.3s;
   opacity: 0.9;
   max-height: 300px;
+  overflow: hidden;
 }
 
 .attachment-entry:hover {
